hphp/test/slow/namespace/hashbang_2.php.expectf

Fatal error: Namespace declaration statement has to be the very first statement in the script: (Line: 4, Char: 14) in %s/test/slow/namespace/hashbang_2.php on line 4
